--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -71,5 +71,6 @@
   "mn22:8.13": "ho detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
   "mn22:8.14": "Ma comunque questo Ariṭṭha mi rappresenta male a causa della propria comprensione errata, crea danno a sé stesso, e accumula molto karma negativo.",
   "mn22:8.15": "Questo sarà a suo danno e sofferenza a lungo.",
-  "mn22:9.1": "È vero, mendicanti, che non è possibile eseguire atti sensuali senza piaceri dei sensi, percezioni sensuali, e pensieri sensuali."
+  "mn22:9.1": "È vero, mendicanti, che non è possibile eseguire atti sensuali senza piaceri dei sensi, percezioni sensuali, e pensieri sensuali.",
+  "mn22:10.1": "Prendete uno sciocco che memorizza l'insegnamento—"
 }
