--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -73,5 +73,6 @@
   "mn22:8.15": "Questo sarà a suo danno e sofferenza a lungo.",
   "mn22:9.1": "È vero, mendicanti, che non è possibile eseguire atti sensuali senza piaceri dei sensi, percezioni sensuali, e pensieri sensuali.",
   "mn22:10.1": "Prendete uno sciocco che memorizza l'insegnamento—",
-  "mn22:10.2": "affermazioni, strofe, discussioni, versi, esclamazioni, leggende, storie di vite passate, storie d'ispirazione, e classificazioni."
+  "mn22:10.2": "affermazioni, strofe, discussioni, versi, esclamazioni, leggende, storie di vite passate, storie d'ispirazione, e classificazioni.",
+  "mn22:10.3": "Ma non esamina il significato di quegli insegnamenti con saggezza,"
 }
