--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -74,5 +74,6 @@
   "mn22:9.1": "È vero, mendicanti, che non è possibile eseguire atti sensuali senza piaceri dei sensi, percezioni sensuali, e pensieri sensuali.",
   "mn22:10.1": "Prendete uno sciocco che memorizza l'insegnamento—",
   "mn22:10.2": "affermazioni, strofe, discussioni, versi, esclamazioni, leggende, storie di vite passate, storie d'ispirazione, e classificazioni.",
-  "mn22:10.3": "Ma non esamina il significato di quegli insegnamenti con saggezza,"
+  "mn22:10.3": "Ma non esamina il significato di quegli insegnamenti con saggezza,",
+  "mn22:10.4": "e quindi non arriva all’accettazione considerata di essi."
 }
