--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -79,5 +79,6 @@
   "mn22:10.5": "Memorizza l'insegnamento per la sola ragione di trovare contraddizioni e vincere dibattiti.",
   "mn22:10.6": "Non realizza l'obbiettivo per il quale li ha memorizzati.",
   "mn22:10.7": "Poichè sono compresi in maniera errata, tali insegnamenti portano al proprio danno e sofferenza.",
-  "mn22:10.8": "Perché questo?"
+  "mn22:10.8": "Perché questo?",
+  "mn22:10.9": "A causa della propria comprensione errata di tali insegnamenti."
 }
