--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -628,5 +628,6 @@
   "dn34:2.1.180": "This is the sixth sphere of mastery.",
   "dn34:2.1.181": "Percipient of the formless as singular internally, one sees external forms as red, red colored, red in characteristics, red in shine.",
   "dn34:2.1.182": "Just as a Scarlet Mallow flower is red, red colored, red in characteristics, red in shine; or just as fabric from Varanasi that is polished on both sides is red, red colored, red in characteristics, red in shine—",
-  "dn34:2.1.183": "in the same way, one is percipient of the formless as singular internally, and sees external forms as red, red colored, red in characteristics, red in shine. And he has this perception—‘Having mastered those, I know and see.’"
+  "dn34:2.1.183": "in the same way, one is percipient of the formless as singular internally, and sees external forms as red, red colored, red in characteristics, red in shine. And he has this perception—‘Having mastered those, I know and see.’",
+  "dn34:2.1.184": "This is the seventh sphere of mastery."
 }
