--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -637,5 +637,6 @@
   "dn34:2.1.189": "These are the eight things that are to be understood fully.",
   "dn34:2.1.190": "What are the eight things that are to be seen for oneself?",
   "dn34:2.1.191": "The eight liberations—",
-  "dn34:2.1.192": "One sees forms as having form."
+  "dn34:2.1.192": "One sees forms as having form.",
+  "dn34:2.1.193": "This is the first liberation."
 }
