--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -640,6 +640,7 @@
   "dn34:2.1.192": "One sees forms as having form.",
   "dn34:2.1.193": "This is the first liberation.",
   "dn34:2.1.194": "Percipient of the formless as singular internally, one sees external forms. (XXXHOW DO WE TAKE \"eko\" HERE?XXX)",
+  "dn34:2.1.195": "This is the second liberation.",
   "dn34:2.1.196": "One is intent only on the beautiful. (XXXIS THIS \"subhaṃ + eva\" OR, WHAT IS \"subhant\"? CAN YOU JUST ADD AN \"-ant\"/\"-at\"/\"-mant\"/\"-vant\" TO ANY ADJECTIVE TO MAKE IT \"possessing\"?XXX)",
   "dn34:2.1.197": "This is the third liberation."
 }
