--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -646,5 +646,6 @@
   "dn34:2.1.198": "With the transcendence of perceptions of form altogether, and the cessation of perceptions of aversion, not attending to perceptions of diversity, one attains and dwells in the sphere of infinite space percipient ‘Space is infinite’.",
   "dn34:2.1.199": "This is the fourth liberation.",
   "dn34:2.1.200": "With the transcendence of the sphere of infinite space altogether, one attains and dwells in the sphere of infinite consciousness percipient ‘Consciousness is infinite’.",
-  "dn34:2.1.201": "This is the fifth liberation."
+  "dn34:2.1.201": "This is the fifth liberation.",
+  "dn34:2.1.202": "With the transcendence of the sphere of infinite consciousness altogether, one attains and dwells in the sphere of no possessions, percipient ‘There is nothing’."
 }
