--- a/translation/lt/piyadassi/sutta/sn/sn35/sn35.28_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn35/sn35.28_translation-lt-piyadassi.json
@@ -8,7 +8,7 @@
   "sn35.28:1.4": "Ir kas, vienuoliai, tas „viskas”, kuris liepsnoja?",
   "sn35.28:1.5": "Akis, vienuoliai, liepsnoja, formos liepsnoja, akies sąmonė liepsnoja, akies sąlytis liepsnoja. Taip pat jausmo tonas, kuris gimsta dėl sąlyčio su akimi – malonus, nemalonus ar nei malonus, nei nemalonus – jis irgi liepsnoja.",
   "sn35.28:1.6": "Liepsnoja kuo?",
-  "sn35.28:1.7": "Liepsnoja aistros ugnimi, neapykantos ugnimi, klydimo ugnimi, liepsnoja gimimu, senėjimu, mirtimi, liūdesiu, raudojimu, skausmu, nepasitenkinimu, neviltimi, aš sakau.",
+  "sn35.28:1.7": "Liepsnoja aistros ugnimi, neapykantos ugnimi, paklydimo ugnimi, liepsnoja gimimu, senėjimu, mirtimi, liūdesiu, raudojimu, skausmu, nepasitenkinimu, neviltimi, aš sakau.",
   "sn35.28:1.8": "Ausis liepsnoja … Nosis liepsnoja … Liežuvis liepsnoja … Kūnas liepsnoja …",
   "sn35.28:1.9": "",
   "sn35.28:1.11": "Protas, vienuoliai, liepsnoja, proto objektai liepsnoja, proto sąmonė liepsnoja, proto sąlytis liepsnoja. Taip pat jausmo tonas, kuris gimsta dėl sąlyčio su protu – malonus, nemalonus ar nei malonus, nei nemalonus – jis irgi liepsnoja.",
