--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -150,7 +150,7 @@
   "mn10:39.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:39.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus.",
   "mn10:40.0": "4.3 Jutimo sričių skyrius",
-  "mn10:40.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus.",
+  "mn10:40.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines patyrimo sritis kaip principus.",
   "mn10:40.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus?",
   "mn10:40.3": "Štai, vienuoliai, vienuolis supranta akį ir supranta materiją, jis taip pat supranta tą saitą, kuris kyla dėl šių dviejų. Jis supranta kaip kyla dar nekilęs saitas, supranta kaip pašalinamas kilęs saitas, ir kaip nebekyla pašalintas saitas, jis taip pat supranta.",
   "mn10:40.4": "Jis supranta ausį ir supranta garsą, jis taip pat supranta tą saitą, kuris kyla dėl šių dviejų. Jis supranta kaip kyla dar nekilęs saitas, supranta kaip pašalinamas kilęs saitas, ir kaip nebekyla pašalintas saitas, jis taip pat supranta.",
