--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -30,7 +30,7 @@
   "sn56.11:6.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios šaltinio tiesa yra pašalinta.”",
   "sn56.11:7.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios baigties tiesa.”",
   "sn56.11:7.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios baigties tiesa turi būti pažinta.”",
-  "sn56.11:7.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios pabaigos tiesa yra pažinta.”",
+  "sn56.11:7.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios baigties tiesa yra pažinta.”",
   "sn56.11:8.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kelio vedančio į kančios pabaigą tiesa.”",
   "sn56.11:8.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kelio vedančio į kančios pabaigą tiesa turi būti išvystyta.”",
   "sn56.11:8.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kelio vedančio į kančios pabaigą tiesa yra išvystyta.”",
