--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -41,7 +41,7 @@
   "sn56.11:10.4": "Štai ką pasakė Palaimintasis.",
   "sn56.11:10.5": "Patenkintas, vienuolių penketukas džiaugėsi Palaimintojo žodžiais.",
   "sn56.11:11.1": "It tuo pat metu, kai buvo išdėstomas šis išaiškinimas, gerbiamajam Kondanjai atsivėrė nesuterštas, tyras Dhammos matymas:",
-  "sn56.11:11.2": "„Visam, kam būdinga kilti, būdinga liautis.”",
+  "sn56.11:11.2": "„Viskam, kam būdinga kilti, būdinga ir baigtis.”",
   "sn56.11:12.1": "Ir Palaimintajam įsukus Dhammos ratą, žemės dievybės sušuko:",
   "sn56.11:12.2": "„Elnių parke, Išminčių vietovėje netoli Varanasio Palaimintasis įsuko šį neprilygstamą Dhammos ratą, kurio negali pasukti atgal nei atsiskyrėliai, nei brahmanai, nei dievybės, nei Mara, nei Brahma, nei dar kas nors pasaulyje.”",
   "sn56.11:12.3": "Išgirdę žemės dievybių šauksmą, Keturių didžiųjų karalių pasaulio dievybės sušuko:",
