--- a/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
@@ -25,7 +25,7 @@
   "mn20:4.7": "„Šios mintys yra nedoros, jos yra smerktinos, jos atneša skausmingą vaisių.”",
   "mn20:4.8": "Jam tiriant tų minčių grėsmę, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir klydimu, jį apleidžia, baigiasi.",
   "mn20:4.9": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
-  "mn20:5.1": "Jei, vienuoliai, vienuoliui tiriant tų minčių grėsmę, vis vien kyla blogos nedoros mintys, susijusios su troškimu, neapykanta ir klydimu, tas vienuolis turėtų stengtis pamiršti tas mintis ir nekreipti į jas dėmesio.",
+  "mn20:5.1": "Jei, vienuoliai, vienuoliui tiriant tų minčių grėsmę, vis vien kyla blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu, tas vienuolis turėtų stengtis pamiršti tas mintis ir nekreipti į jas dėmesio.",
   "mn20:5.2": "Jam stengiantis pamiršti tas mintis ir nekreipti į jas dėmesio, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu, jį apleidžia, baigiasi.",
   "mn20:5.3": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
   "mn20:5.4": "Panašiai, vienuoliai, kaip turintis gerą regą žmogus norėdamas nematyti formų, kurios atsidūrė jo akiratyje,",
