--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -13,7 +13,7 @@
   "sn56.11:3.3": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisinga sutelktis.",
   "sn56.11:3.4": "Štai toks, vienuoliai, yra Tathagatos suvoktas vidurio kelias, kuris atvėrė akis, suteikė žinojimą, atvedė prie ramybės, tiesioginio pažinimo, tobulo nušvitimo, Nibbanos.",
   "sn56.11:4.1": "O gi, vienuoliai, štai taurinanti kančios tiesa:",
-  "sn56.11:4.2": "ir gimimas yra kančia, ir senėjimas yra kančia, ir ligos - kančia, ir mirtis - kančia, ir susidūrimas su tuo, kas nemiela, - kančia, ir išsiskyrimas su tuo, kas miela, - kančia, ir norimo negavimas - kančia, trumpiau, penki sandai, paveikti prisirišimo, yra kančia.",
+  "sn56.11:4.2": "ir gimimas yra kančia, ir senėjimas yra kančia, ir ligos - kančia, ir mirtis - kančia, ir susidūrimas su tuo, kas nemiela, - kančia, ir išsiskyrimas su tuo, kas miela, - kančia, ir norimo negavimas - kančia, trumpiau, penki savinami sandai yra kančia.",
   "sn56.11:4.3": "O gi, vienuoliai, štai taurinanti kančios šaltinio tiesa:",
   "sn56.11:4.4": "tai yra tas troškimas, kuris yra su džiugesiu ir aistra ir veda į pakartotiną būtį, randantis pasitenkinimą tai čia, tai ten. O būtent,",
   "sn56.11:4.5": "juslinių malonumų troškimas, būties troškimas, nebūties troškimas.",
