--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -83,7 +83,7 @@
   "mn10:30.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
   "mn10:31.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną viduje, arba gyvena, kontempliuodamas kūną kaip kūną išorėje, arba gyvena, kontempliuodamas kūną kaip kūną ir viduje, ir išorėje.",
   "mn10:31.2": "Jis stebi kūne kilimo prigimtį, arba stebi kūne nykimo prigimtį, arba stebi kūne ir kilimo, ir nykimo prigimtį.",
-  "mn10:31.3": "Arba jame yra įtvirtinta atida: „Yra kūnas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
+  "mn10:31.3": "Arba jame yra įtvirtinta atida: „Yra kūnas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir nieko pasaulyje nesisavina.",
   "mn10:31.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
   "mn10:32.0": "2. Jausmo tonų kontempliacija",
   "mn10:32.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas jausmo tonus kaip jausmo tonus?",
