--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -174,7 +174,7 @@
   "mn10:42.9": "Viduje esant lygiažiūros nušvitimo veiksniui, jis supranta: „Manyje yra lygiažiūros nušvitimo veiksnys”, – arba viduje nesant lygiažiūros nušvitimo veiksnio, supranta: „Manyje nėra lygiažiūros nušvitimo veiksnio“. Jis taip pat supranta kaip kyla dar nekilęs lygiažiūros nušvitimo veiksnys, ir kaip kilęs lygiažiūros nušvitimo veiksnys išvystomas iki tobulumo, jis taip pat supranta.",
   "mn10:43.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
   "mn10:43.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
-  "mn10:43.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
+  "mn10:43.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir nieko pasaulyje nesisavina.",
   "mn10:43.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus.",
   "mn10:44.0": "4.5 Tiesų skirius",
   "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
