--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -118,5 +118,6 @@
   "sn-blurbs:sn3.3": "Pasenadi pergunta se algo que nasceu pode escapar da velhice e da morte.",
   "sn-blurbs:sn3.4": "Ao relatar uma reflexão que lhe ocorrera durante um retiro, Pasenadi diz que os que praticam maus atos tratam a si como inimigos. O Buda expressa concordância em versos.",
   "sn-blurbs:sn3.5": "Ainda que protegido por um exército, quem pratica o mal está desprotegido.",
-  "sn-blurbs:sn3.6": "No mundo, há poucos que não se tornam negligentes e complacentes quando obtêm luxos materiais."
+  "sn-blurbs:sn3.6": "No mundo, há poucos que não se tornam negligentes e complacentes quando obtêm luxos materiais.",
+  "sn-blurbs:sn3.7": "O Rei Pasenadi lamenta a alta frequência com que vê pessoas mentindo por causa de prazeres sensuais em sua sala de julgamento."
 }
