--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -123,5 +123,6 @@
   "sn-blurbs:sn3.8": "O Rei Pasenadi pergunta à Rainha Mallikā quem é a pessoa mais querida. Ambos concordam que a pessoa mais querida somos nós e o Buda concorda.",
   "sn-blurbs:sn3.9": "Um grande sacrifício que envolvia a matança de muitos animais fora preparado para o Rei Pasenadi. O Buda condena tais sacrifícios e diz que um sacrifício frutífero envolve uma oferta sem culpa e sem danos.",
   "sn-blurbs:sn3.10": "É relatado ao Buda a ocasião em que muitas pessoas são presas pelo Rei Pasenadi.",
-  "sn-blurbs:sn3.11": "Ao passar um grupo de ascetas, o Rei Pasenadi pergunta ao Buda se algum deles era perfeito. O Buda diz não ser fácil para alguém como o Rei Pasenadi julgar as conquistas espirituais de outras pessoas. O Rei Pasenadi revela que eles são, na verdade, seus espiões."
+  "sn-blurbs:sn3.11": "Ao passar um grupo de ascetas, o Rei Pasenadi pergunta ao Buda se algum deles era perfeito. O Buda diz não ser fácil para alguém como o Rei Pasenadi julgar as conquistas espirituais de outras pessoas. O Rei Pasenadi revela que eles são, na verdade, seus espiões.",
+  "sn-blurbs:sn3.12": "Cinco reis, Pasenadi inclusive, estão se divertindo e se perguntam qual dos sentidos traz a maior satisfação. Eles perguntam ao Buda, que responde dizendo que é um julgamento subjetivo dependente das preferências de cada um. Inspirado, o discípulo leigo Candanaṅgalika recita um verso de louvor ao Buda."
 }
