--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -71,7 +71,7 @@
   "ja-name:70.ja62": "Der Ehemann mit den verbundenen Augen ",
   "ja-name:71.ja63": "Der Buttermilch-Weise ",
   "ja-name:72.ja64": "Die Unergründlichkeit der Frauen ",
-  "ja-name:73.ja65": "Das Interesse verlieren ",
+  "ja-name:73.ja65": "Ohne Freude ",
   "ja-name:74.ja66": "Königin Sanftherz ",
   "ja-name:75.ja67": "Söhne fallen in den Schoß der Mutter ",
   "ja-name:76.ja68": "In Sāketa ",
