--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -98,7 +98,7 @@
   "mn9:32-34.6": "Ma cos'è l'attaccamento? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:32-34.7": "Ci sono questi quattro tipi di attaccamento.",
   "mn9:32-34.8": "Attaccamento ai piaceri dei sensi, alle opinioni, a precetti ed osservanze, e a teorie del sé.",
-  "mn9:32-34.9": "L'attaccamento origina dalla sete. L'attaccamento cessa quando la voglia cessa. La pratica che porta alla cessazione dell'attaccamento è semplicemente questo nobile ottuplice percorso ...”",
+  "mn9:32-34.9": "L'attaccamento origina dalla sete. L'attaccamento cessa quando la sete cessa. La pratica che porta alla cessazione dell'attaccamento è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:36-38.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
   "mn9:36-38.3": "“Può esserci, Fratelli.",
   "mn9:36-38.4": "Un discepolo nobile comprende la voglia, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
