--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -293,7 +293,7 @@
   "mn1:171.3": "Perché questo?",
   "mn1:171.4": "Perché ha capito che il godimento è la radice della sofferenza.",
   "mn1:171.5": "e che la nascita risulta dalla continuazione dell'esistenza; chiunque continua ad esistere poi invecchia e muore.",
-  "mn1:171.6": "È per questo che il Realizzato—con l'esaurimento, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni voglia—si è risvegliato al supremo perfetto Risveglio, dico io.",
+  "mn1:171.6": "È per questo che il Realizzato—con l'esaurimento, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni sete—si è risvegliato al supremo perfetto Risveglio, dico io.",
   "mn1:172-194.1": "Conosce direttamente l'acqua …",
   "mn1:172-194.2": "il fuoco …",
   "mn1:172-194.3": "l'aria …",
@@ -321,7 +321,7 @@
   "mn1:172-194.25": "Perché questo?",
   "mn1:172-194.26": "Perché ha capito che il godimento è la radice della sofferenza.",
   "mn1:172-194.27": "e che la nascita risulta dalla continuazione dell'esistenza; chiunque continua ad esistere poi invecchia e muore.",
-  "mn1:172-194.28": "È per questo che il Realizzato—con l'esaurimento, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni voglia—si è risvegliato al supremo perfetto Risveglio, dico io.”",
+  "mn1:172-194.28": "È per questo che il Realizzato—con l'esaurimento, lo svanire, la cessazione, l'abbandono, ed il lasciare andare ogni sete—si è risvegliato al supremo perfetto Risveglio, dico io.”",
   "mn1:172-194.30": "Questo è ciò che il Buddha disse.",
   "mn1:172-194.31": "Ma i mendicanti non furono contenti di ciò che il Buddha disse."
 }
