--- a/translation/it/giovannizappa/sutta/mn/mn13_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn13_translation-it-giovannizappa.json
@@ -107,7 +107,7 @@
   "mn13:29.5": "“Sì, Signore.”",
   "mn13:29.6": "“Anche questo è lo svantaggio delle viste.",
   "mn13:30.1": "E qual'è la fuga dalle viste?",
-  "mn13:30.2": "Rimuovere e abbandonare il desiderio e la voglia per le viste: questa è la fuga dalle viste.",
+  "mn13:30.2": "Rimuovere e abbandonare il desiderio e la sete per le viste: questa è la fuga dalle viste.",
   "mn13:31.1": "Ci sono asceti e bramini che non capiscono come sono davvero la gratificazione, lo svantaggio, e la fuga per quanto riguarda le viste in questo modo per quello che sono. È impossibile per loro comprendere completamente le viste, o istruire altri affinché, praticando così, comprendano completamente le viste.",
   "mn13:31.2": "Ci sono asceti e bramini che capiscono come sono davvero la gratificazione, lo svantaggio, e la fuga per quanto riguarda le viste in questo modo per quello che sono. È possibile per loro comprendere completamente le viste, o istruire altri affinché, praticando così, comprendano completamente le viste.",
   "mn13:32.1": "E qual’è la gratificazione delle sensazioni?",
@@ -123,7 +123,7 @@
   "mn13:36.1": "E qual’è lo svantaggio delle sensazioni?",
   "mn13:36.2": "Il fatto che le sensazioni siano impermanenti, sofferenza, e deperibili: questo è il loro svantaggio.",
   "mn13:37.1": "E qual'è la fuga dalle sensazioni?",
-  "mn13:37.2": "Rimuovere e abbandonare il desiderio e la voglia per le sensazioni: questa è la fuga dalle sensazioni.",
+  "mn13:37.2": "Rimuovere e abbandonare il desiderio e la sete per le sensazioni: questa è la fuga dalle sensazioni.",
   "mn13:38.1": "Ci sono asceti e bramini che non capiscono come sono davvero la gratificazione, lo svantaggio, e la fuga per quanto riguarda le sensazioni in questo modo per quello che sono. È impossibile per loro comprendere completamente le sensazioni, o istruire altri affinché, praticando così, comprendano completamente le sensazioni.",
   "mn13:38.2": "Ci sono asceti e bramini che capiscono come sono davvero la gratificazione, lo svantaggio, e la fuga per quanto riguarda le sensazioni in questo modo per quello che sono. È possibile per loro comprendere completamente le sensazioni, o istruire altri affinché, praticando così, comprendano completamente le sensazioni.",
   "mn13:38.3": "Questo è ciò che il Buddha disse.",
