--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -101,7 +101,7 @@
   "mn9:32-34.9": "L'attaccamento origina dalla sete. L'attaccamento cessa quando la sete cessa. La pratica che porta alla cessazione dell'attaccamento è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:36-38.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
   "mn9:36-38.3": "“Può esserci, Fratelli.",
-  "mn9:36-38.4": "Un discepolo nobile comprende la voglia, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
+  "mn9:36-38.4": "Un discepolo nobile comprende la sete, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:36-38.6": "Ma cos'è la voglia? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:36-38.7": "Ci sono queste sei classi di voglie.",
   "mn9:36-38.8": "Voglia di viste, suoni, odori, sapori, tatti, e pensieri.",
