--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -104,7 +104,7 @@
   "mn9:36-38.4": "Un discepolo nobile comprende la sete, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:36-38.6": "Ma cos'è la sete? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:36-38.7": "Ci sono queste sei classi di voglie.",
-  "mn9:36-38.8": "sete di viste, suoni, odori, sapori, tatti, e pensieri.",
+  "mn9:36-38.8": "Sete di viste, suoni, odori, sapori, tatti, e pensieri.",
   "mn9:36-38.9": "La sete origina dalla sensazione. La sete cessa quando la sensazione cessa. La pratica che porta alla cessazione della sete è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:40-42.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
   "mn9:40-42.3": "“Può esserci, Fratelli.",
