--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -161,7 +161,7 @@
   "mn26:19.2": "‘Questo insegnamento che ho scoperto è profondo, difficile da vedere, difficile da capire, pacifico, sublime, fuori dalla portata della logica, raffinato, comprensibile agli astuti.",
   "mn26:19.3": "Ma alla gente piacciono gli attaccamenti, li ama e li apprezza.",
   "mn26:19.4": "È difficile per loro vedere questo: la condizionalità specifica, l'originazione dipendente.",
-  "mn26:19.5": "È anche difficile per loro vedere questo: calmare ogni attività, lasciar andare ogni attaccamento, l'esaurimento della voglia, lo svanire della passione, la cessazione, l'estinzione.",
+  "mn26:19.5": "È anche difficile per loro vedere questo: calmare ogni attività, lasciar andare ogni attaccamento, l'esaurimento della sete, lo svanire della passione, la cessazione, l'estinzione.",
   "mn26:19.6": "E se io spiegassi questo insegnamento, gli altri potrebbero non capirmi, il che sarebbe frustrante e fastidioso per me.’",
   "mn26:19.7": "Poi questi versi, i quali non furono né ispirati in maniera sovrannaturale, né imparati in passato, mi vennero in mente:",
   "mn26:19.8": "‘Ho faticato molto per realizzare questo,",
@@ -251,7 +251,7 @@
   "mn26:25.5": "Ho risposto ad Upaka in poesia:",
   "mn26:25.6": "‘Io sono il campione, il conoscitore di tutto,",
   "mn26:25.7": "incontaminato tra ogni cosa.",
-  "mn26:25.8": "Ho abbandonato tutto, libero attraverso l'esaurimento della voglia.",
+  "mn26:25.8": "Ho abbandonato tutto, libero attraverso l'esaurimento della sete.",
   "mn26:25.9": "Sapendo io stesso, di chi dovrei essere seguace?",
   "mn26:25.10": "Non ho maestro.",
   "mn26:25.11": "Non c'è nessuno come me.",
